# moneymanager-parser

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/moneymanager_parser/: __init__.py  cli.py  core.py  models.py  schema.py
tests/: conftest.py  test_parser.py
