[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "moneymanager-parser"
dynamic = ["version"]
description = "Typed parser and query SDK for Realbyte Money Manager .mmbak backups."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Shubham Sharma", email = "shubhamsharma1172@gmail.com" }]
keywords = ["money-manager", "realbyte", "mmbak", "sqlite", "finance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/shubham1172/moneymanager-parser"
Repository = "https://github.com/shubham1172/moneymanager-parser"
Issues = "https://github.com/shubham1172/moneymanager-parser/issues"

[project.scripts]
mmbak = "moneymanager_parser.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[tool.hatch.version]
path = "src/moneymanager_parser/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["moneymanager_parser"]

[tool.coverage.report]
show_missing = true
fail_under = 90
